--- a/css/common/form.css
+++ b/css/common/form.css
@@ -1,8 +1,38 @@
 .form {
 	position: relative;
 }
+.form__title {
+	font-size: 16px;
+	font-weight: bold;
+	padding-top: 2px;
+	margin-bottom: 26px;
+}
+.form__delimeter {
+	overflow: hidden;
+	height: 1px;
+	background-color: #d3d2d2;
+	margin-bottom: 20px;
+}
+.form__label {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 6px;
+}
+.form__text {
+  font-size: 14px;
+  line-height: 1.64;
+}
 .form__row {
-	margin-bottom: 15px;
+	margin-bottom: 18px;
+}
+.form__row_margin_13 {
+	margin-bottom: 13px;
+}
+.form__row_margin_14 {
+	margin-bottom: 14px;
+}
+.form__row_margin_62 {
+	margin-bottom: 62px;
 }
 .form__group {
 	font-size: 0;
@@ -20,39 +50,53 @@
 .form__select {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	display: block;
+	border: solid 1px #b6b6b6;
+	transition: all linear 0.3s;
+}
+.form__select:focus {
+	border-color: #333;
 }
 .form__input {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-size: 14px;
+	font-size: 15px;
 	display: block;
 	width: 100%;
 	background-color: #fff;
-	border: 2px solid #f0f0f0;
-	height: 38px;
+	border: solid 1px #b6b6b6;
+	height: 50px;
 	outline-style: none;
-	border-radius: 23px;
-	padding-left: 20px;
+	border-radius: 3px;
+	padding-left: 16px;
 	box-sizing: border-box;
+	transition: all linear 0.3s;
+}
+.form__input:focus {
+	border-color: #333;
 }
 .form__textarea {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-size: 14px;
+	font-size: 15px;
 	display: block;
 	width: 100%;
-	border: 2px solid #f0f0f0;
+	border: solid 1px #b6b6b6;
 	background-color: #fff;
-	height: 129px;
+	height: 176px;
 	outline-style: none;
 	resize: none;
-	border-radius: 10px;
-	padding-left: 20px;
+	border-radius: 3px;
+	padding-left: 16px;
 	padding-top: 14px;
 	box-sizing: border-box;
+	transition: all linear 0.3s;
+}
+.form__textarea:focus {
+	border-color: #333;
 }
 .form__checkbox {
-	font-size: 14px;
-	line-height: 1.22em;
-	padding: 0 0 0 26px;
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 1.57;
+	padding: 0 0 0 29px;
 	position: relative;
 	display: inline-block;
 	cursor: pointer;
@@ -61,8 +105,8 @@
 	position: absolute;
 	left: 0;
 	top: 0;
-	width: 18px;
-	height: 18px;
+	width: 20px;
+	height: 20px;
 	background: url('/images/checkbox.png') 0 0 no-repeat;
 }
 .form__checkbox-input:checked + .form__checkbox-icon {
@@ -76,26 +120,20 @@
 	height: 1px;
 }
 .form__radio {
-	font-size: 14px;
-	line-height: 1.22em;
-	padding: 0 0 0 23px;
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 1.57;
+	padding: 0 0 0 29px;
 	position: relative;
 	display: inline-block;
 	cursor: pointer;
-	margin-right: 12px;
-}
-.form__radio_type_points {
-	line-height: 1.75em;
-}
-.form__radio_type_points .form__radio-icon {
-	top: 5px;
 }
 .form__radio-icon {
 	position: absolute;
 	left: 0;
-	top: 2px;
-	width: 14px;
-	height: 14px;
+	top: 0;
+	width: 20px;
+	height: 20px;
 	background: url('../../images/radio.png') 0 0 no-repeat;
 }
 .form__radio-input:checked + .form__radio-icon {
@@ -110,4 +148,76 @@
 }
 .form__radio-wrap {
 	padding-top: 11px;
+}
+.form__btn-wrap {
+	height: 60px;
+}
+.form__btn {
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 60px;
+	text-align: center;
+	line-height: 60px;
+	font-size: 16px;
+	font-weight: bold;
+	color: #fff;
+	text-decoration: none;
+	cursor: pointer;
+	outline-style: none;
+	background-color: #e33d1e;
+	border-style: none;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	transition: all linear 0.2s;
+}
+.form__btn:hover {
+	background-color: #252525;
+}
+.form__file {
+	position: relative;
+	display: inline-block;
+	height: 41px;
+	text-align: center;
+  border: solid 1px #242424;
+  border-radius: 41px;
+  font-size: 16px;
+  line-height: 41px;
+  font-weight: bold;
+  padding: 0 43px 0 54px;
+  cursor: pointer;
+  transition: all linear 0.2s;
+}
+.form__file:hover {
+	background-color: #f5f5f5;
+}
+.form__file:before {
+	content: '';
+	width: 18px;
+	height: 21px;
+	background: url('/images/file.png') 0 0 no-repeat;
+	position: absolute;
+	left: 21px;
+	top: 11px;
+}
+.form__file-input {
+	width: 0;
+	height: 0;
+	position: absolute;
+	overflow: hidden;
+	visibility: hidden;
+}
+
+@media screen and (max-height: 300px){
+
+	.form__btn-wrap {
+		position: absolute;
+		width: auto;
+		left: -19px;
+		right: -19px;
+	}
+	.form__btn {
+		position: relative;
+	}
+	
 }
