--- a/css/other/rating.css
+++ b/css/other/rating.css
@@ -26,3 +26,8 @@
   overflow: hidden;
   padding: 4px 0;
 }
+.rating_type_linline {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 13px;
+}
