--- a/css/main.css
+++ b/css/main.css
@@ -28,8 +28,11 @@
 @import url("other/social.css");
 @import url("other/paint.css");
 @import url("other/prod-cont.css");
+@import url("other/prod-draw.css");
 @import url("other/prod-navi.css");
 @import url("other/prod-preview.css");
+@import url("other/prod-prop.css");
+@import url("other/prod-opt.css");
 @import url("other/prod-info.css");
 @import url("other/offer-scale-premium.css");
 @import url("other/qnt.css");
