--- a/css/other/prod-opt.css
+++ b/css/other/prod-opt.css
@@ -1,6 +1,6 @@
 .prod-opt {
 	background-color: #f0f0f0;
-	padding: 31px 0 0 0;
+	padding: 31px 0 58px 0;
 }
 .prod-opt__title {
   font-size: 16px;
