--- a/css/common/form.css
+++ b/css/common/form.css
@@ -51,13 +51,36 @@
 	margin-right: 0;
 }
 .form__select {
+	transition: all linear 0.3s;
+  border-bottom: solid 1px #979797;
+  position: relative;
+  display: block;
+}
+.form__select:after {
+  content: '';
+  background: url('../../images/select.png') 0 0 no-repeat;
+  width: 15px;
+  height: 19px;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  margin-top: -8px;
+}
+.form__select-field {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	display: block;
+  width: 100%;
+  height: 36px;
 	border: solid 1px #b6b6b6;
-	transition: all linear 0.3s;
-}
-.form__select:focus {
-	border-color: #333;
+  font-size: 17px;
+  line-height: 1.29;
+  background-color: transparent;
+  border-style: none;
+  outline-style: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  cursor: pointer;
 }
 .form__input {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
